--- a/aluraCar/src/index.html
+++ b/aluraCar/src/index.html
@@ -23,6 +23,8 @@
     }
   </script>-->
 
+  
+
   <link href="build/main.css" rel="stylesheet">
 
 </head>
@@ -33,7 +35,8 @@
 
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
-
+  
+  <script src="build/vendor.js"></script>
   <!-- The bundle js is generated during the build process -->
   <script src="build/main.js"></script>
 
