--- a/aluraCar/src/pages/cadastro/cadastro.html
+++ b/aluraCar/src/pages/cadastro/cadastro.html
@@ -1,4 +1,3 @@
-
 <ion-header>
 
   <ion-navbar>
@@ -9,5 +8,29 @@
 
 
 <ion-content padding>
+  <h2 text-center>{{ carro.nome }}</h2>
+  <p text-center>R$ {{ precoTotal }}</p>
 
+  <form (ngSubmit)="agenda()">
+
+    <ion-item>
+      <ion-label stacked>Nome:</ion-label>
+      <ion-input [(ngModel)]="nome" name="nome" type="text"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label stacked>Endereço:</ion-label>
+      <ion-input [(ngModel)]="endereco" name="endereco" type="text"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label stacked>email:</ion-label>
+      <ion-input [(ngModel)]="email" name="email" type="text"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label stacked>data do agendamento:</ion-label>
+      <ion-datetime [(ngModel)]="data" name="data" displayFormat="DD/MM/YY"></ion-datetime>
+    </ion-item>
+
+    <button ion-button block type="submit">Finalizar agendamento</button>
+
+  </form>
 </ion-content>
