--- a/aluraCar/src/pages/home/home.html
+++ b/aluraCar/src/pages/home/home.html
@@ -9,7 +9,7 @@
 <ion-content padding>
   <ion-list>
     <ion-item *ngFor="let carro of carros" (click)="seleciona(carro)"><h2>{{carro.nome}}</h2>
-      <h3>{{carro.preco}}</h3>
+      <h3>R$ {{carro.preco}}</h3>
       <p>Disponível</p>
     </ion-item>
   </ion-list>
