--- a/aluraCar/src/pages/cadastro/cadastro.html
+++ b/aluraCar/src/pages/cadastro/cadastro.html
@@ -15,19 +15,19 @@
 
     <ion-item>
       <ion-label stacked>Nome:</ion-label>
-      <ion-input [(ngModel)]="nome" name="nome" type="text"></ion-input>
+      <ion-input [(ngModel)]="agendamento.nome" name="nome" type="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Endereço:</ion-label>
-      <ion-input [(ngModel)]="endereco" name="endereco" type="text"></ion-input>
+      <ion-input [(ngModel)]="agendamento.endereco" name="endereco" type="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>email:</ion-label>
-      <ion-input [(ngModel)]="email" name="email" type="text"></ion-input>
+      <ion-input [(ngModel)]="agendamento.email" name="email" type="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>data do agendamento:</ion-label>
-      <ion-datetime [(ngModel)]="data" name="data" displayFormat="DD/MM/YY"></ion-datetime>
+      <ion-datetime [(ngModel)]="agendamento.data" name="data" displayFormat="DD/MM/YY"></ion-datetime>
     </ion-item>
 
     <button ion-button block type="submit">Finalizar agendamento</button>
